<resources>
    <string name="app_name">CSV Magic</string>
    <string name="input_hint_text">Enter text</string>
    <string name="color_text">Color</string>
    <string name="background_text">Background</string>
    <string name="logo_text">Logo</string>
    <string name="text_text">Text</string>
    <string name="qr_sign">generated by qrmagicapp.com</string>
    <string name="types_text">Types</string>
    <string name="please_wait">Please wait…</string>
    <string name="coupon_qr">Coupon QR</string>
    <string name="image_text">Image</string>
    <string name="information_text">Information</string>
    <string name="terms_conditions"><u>Terms and Conditions</u></string>
    <string name="next_text"><u>Next</u></string>
    <string name="next">Next</string>
    <string name="design_customization">Customize Design</string>
    <string name="share_qr_image">Share QR Image</string>
    <string name="qr_code_history">History</string>
    <string name="history_empty_list_text">No history</string>
    <string name="dynamic_mode_text">"Dynamic Mode  "</string>
    <string name="dynamic_empty_list_text">Dynamic QR list is empty!</string>
    <string name="share_top_heading_text">All QR  Codes saved locally on device. You always can use them in history sections.</string>
    <string name="share_button_text">Share</string>
    <string name="ready_to_share_text">Ready to share!</string>
    <string name="cancel_text">Cancel</string>
    <string name="chose_text">Chose</string>
    <string name="background_image_size_hint_text">Note: Background Image size will be 800x800.</string>
    <string name="custom_color_heading_text">Note:  Here you can write the custom color Hex value without #</string>
    <string name="custom_color_input_hint">Enter the color value (eeeeee)</string>
    <string name="add_text">Add</string>
    <string name="contact_text">Contact</string>
    <string name="name_text">Name</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="email_text">Email</string>
    <string name="company_text">Company</string>
    <string name="job_title_text">Job Title</string>
    <string name="address_text">Address</string>
    <string name="detail_text">Detail</string>
    <string name="coupon_set_background_color_hint">*set background color</string>
    <string name="coupon_set_title_hint">*set Title</string>
    <string name="coupon_banner_size_hint">*set banner 640x360</string>
    <string name="coupon_set_tag_hint">*set tag</string>
    <string name="coupon_set_offer_title_hint">*set offer title</string>
    <string name="coupon_set_offer_description_hint">*set offer description</string>
    <string name="coupon_get_coupon_button_text_hint">*set button text</string>
    <string name="coupon_code_heading_text">Coupon Code</string>
    <string name="coupon_set_coupon_code_hint">*set coupon code</string>
    <string name="coupon_valid_till_text">Valid until</string>
    <string name="coupon_set_valid_date_hint">*set valid date</string>
    <string name="coupon_set_terms_condition_hint">*set terms &amp; conditions</string>
    <string name="coupon_set_redeem_button_hint">*set button text</string>
    <string name="coupon_terms_condition_display_hint">Write something about terms and conditions</string>
    <string name="coupon_user_hint_text">This screen the user will see after scan qr code</string>
    <string name="coupon_required_fields_hint_text">Please set all field that marked with * sign</string>
    <string name="dynamic_qr_id_hint">"QR ID: "</string>
    <string name="dynamic_qr_url_hint">"URL: "</string>
    <string name="instagram_text">Instagram</string>
    <string name="instagram_hint_text">Please fill in the username</string>
    <string name="custom_logo_image_size_hint">Note: Logo Image size will be 500x500.</string>
    <string name="phone_text">Phone</string>
    <string name="phone_number_hint_text">Please fill in the phone number</string>
    <string name="website_text">Website</string>
    <string name="redeem_website_url_hint_text">Enter the Website Url</string>
    <string name="update_text">Update</string>
    <string name="redeem_text_input_hint_text">Please fill in the text here</string>
    <string name="sms_text">SMS</string>
    <string name="sms_recipient_hint_text">Please fill in the recipient</string>
    <string name="sms_message_hint_text">Please fill in the message</string>
    <string name="text_hint_text">Please fill in the text here</string>
    <string name="sale_badge_heading_text">Sale badge</string>
    <string name="custom_sale_badge_hint_text">Enter the custom sale badge</string>
    <string name="update_dynamic_url_heading">Update Dynamic Url</string>
    <string name="update_dynamic_url_hint_text">Please fill in the updated url</string>
    <string name="website_hint_text">Please fill in the website address</string>
    <string name="whatsapp_text">Whatsapp</string>
    <string name="wifi_text">WI FI</string>
    <string name="network_name_hint_text">Network name (SSID)</string>
    <string name="password">Password</string>
    <string name="wpa_security_heading">WPA/WPA2</string>
    <string name="wep_security_heading">WEP</string>
    <string name="none_security_heading">NONE</string>
    <string name="scanner">Scanner</string>
    <string name="barcode_history_text">Barcode History</string>
    <string name="feedback_set_text_background_color_hint">*set text and background color</string>
    <string name="generator">Generator</string>
    <string name="coupon_text">Coupon</string>
    <string name="feedback_text">Feedback</string>
    <string name="static_link_text">Static Link</string>
    <string name="dynamic_link_text">Dynamic Link</string>
    <string name="feedback_inner_title_hint">*set the title</string>
    <string name="feedback_inner_description_hint">*set the description</string>
    <string name="feedback_comment_hint">Add a comment (optional)</string>
    <string name="feedback_contact_information_text">Enter your contact information if you want us to get back to you</string>
    <string name="feedback_email_hint">Email (optional)</string>
    <string name="feedback_phone_number_hint">Phone number (optional)</string>
    <string name="feedback_send_button_text_hint">*set button text and color</string>
    <string name="feedback_qr">Feedback QR</string>
    <string name="code_detail_text">Code Detail</string>
    <string name="copy_text">Copy</string>
    <string name="search_web_text">search<br /> in web</string>
    <string name="save_text">Save</string>
    <string name="share_using">share with</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">Scan</string>
    <string name="create">Create</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="tables">Tables</string>
    <string name="rate_us">Rate us</string>
    <string name="support_email">qrmagicsup@gmail.com</string>
    <string name="recommend_to_friends">Recommend to friends</string>
    <string name="contact_support">Contact Support</string>
    <string name="share_app_message">I am using CSVMagic for scanning and generating CSV Files. You should try by uploading from here \n</string>
    <string name="email_subject">Write your subject</string>
    <string name="later">Later</string>
    <string name="do_you_like_our_app">Do you like our app?</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="new_table_text">NEW TABLE</string>
    <string name="add_table_hin_text">Enter the table name</string>
    <string name="create_table_hint_text">Create Table</string>
    <string name="submit">Submit</string>
    <string name="tables_data">Tables Data</string>
    <string name="menu">Menu</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="vibration_summary">Turn on/off mobile vibration</string>
    <string name="summary_sound">Turn on/off mobile sound</string>
    <string name="summary_clipboard">Turn on/off auto copy to clipboard</string>
    <string name="title_vibration">Vibration</string>
    <string name="title_sound">Sound</string>
    <string name="title_clipboard">Auto copy to clipboard</string>
    <string name="key_sound">key_sound</string>
    <string name="key_vibration">key_vibration</string>
    <string name="key_clipboard">key_clipboard</string>
    <string name="plus_table_text">+ Table</string>
    <string name="add_list_value_hint_text">Enter the List Name</string>
    <string name="new_list_value_text">+ add one more</string>
    <string name="field_type_list">Field Type List</string>
    <string name="field_list">Table Field List</string>
    <string name="sheets">Sheets</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="social_networks_text">Social Networks</string>
    <string name="social_networks_qr">Social Netwroks QR</string>
    <string name="sn_title_hint_text">Please enter the title</string>
    <string name="sn_description_hint_text">Please enter the description</string>
    <string name="table_saving_data_hint">List of the tables for saving data <br />Click on table to edit fields of the table</string>
    <string name="create_table_fields_hint_text">There is a list of the fields for *</string>
    <string name="create_table_fields_hint2_text">You can add fields here</string>
    <string name="back_text">Back</string>
    <string name="feedback_code_heading_text">Leave your email to get feedbacks</string>
    <string name="owner_email_hint">Email (Owner)</string>
    <string name="start_new">Start New</string>
    <string name="dynamic_links_text">Dynamic Links</string>
    <string name="generate">Generate</string>
    <string name="finish">Finish</string>
    <string name="add_field">+ ADD FIELD</string>
    <string name="close_text">Close</string>
    <string name="title_tips">Tips</string>
    <string name="key_tips" translatable="false">key_tips</string>
    <string name="summary_tips">How to use app</string>
    <string name="mode_title_text">Mode Preference</string>
    <string name="key_mode" translatable="false">key_mode</string>
    <string name="mode_summary_text">Personalize your Mode</string>
    <string name="mode_default_value">Inventory</string>
    <string name="minimum_package_btn">Minimum 1 CREDIT</string>
    <string name="package_heading_text">Choose the Credit Package</string>
    <string name="regular_package_btn">Regular 6 CREDITS</string>
    <string name="premium_package_btn">Premium 10 CREDITS</string>
    <string name="text_capture_button_text">Text Capture</string>
    <string name="create_ticket_message_hint_text">Message</string>
    <string name="create_ticket_title_hint_text">Title</string>
    <string name="create_ticket_heading_text">Create the support ticket</string>
    <string name="product_title_text">Title</string>
    <string name="sync_text">Sync</string>
    <string name="choose_option">Choose option</string>
    <string name="manual_text">Manual</string>
    <string name="import_file">Import File</string>
    <string name="camera_text_mode">Camera to text Mode</string>
    <string name="list_text">List</string>
</resources>