<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory>

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_vibration"
            android:summary="@string/vibration_summary"
            app:key="@string/key_vibration"
            app:title="@string/title_vibration" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_sound"
            android:summary="@string/summary_sound"
            app:key="@string/key_sound"
            app:title="@string/title_sound" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_clipboard"
            android:summary="@string/summary_clipboard"
            app:key="@string/key_clipboard"
            app:title="@string/title_clipboard" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_tips"
            android:summary="@string/summary_tips"
            app:key="@string/key_tips"
            app:title="@string/title_tips" />

        <ListPreference
            android:title="@string/mode_title_text"
            android:summary="@string/mode_summary_text"
            android:icon="@drawable/ic_mode"
            android:key="@string/key_mode"
            android:defaultValue="@string/mode_default_value"
            android:entries="@array/mode_list"
            android:entryValues="@array/mode_list"
            />
    </PreferenceCategory>

</PreferenceScreen>