<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item android:title="@string/menu">
            <menu>

                <item
                    android:icon="@drawable/ic_login"
                    android:id="@+id/login"
                    android:title="@string/login"
                    android:visible="false" />

                <item
                    app:iconTint="#000000"
                    android:icon="@drawable/ic_link"
                    android:id="@+id/dynamic_links"
                    android:title="@string/dynamic_links_text"
                    android:visible="false"
                    />

                <item
                    android:icon="@drawable/ic_sheets"
                    android:id="@+id/sheets"
                    android:title="@string/sheets"
                    android:visible="false"
                    />

                <item
                    android:title="@string/tables"
                    android:id="@+id/tables"
                    android:icon="@drawable/ic_gridview"
                    android:visible="false"
                    />

                <item
                    android:title="@string/field_list"
                    android:id="@+id/field_list"
                    android:icon="@drawable/ic_table_row"
                    android:visible="false"
                    />

                <item
                    android:icon="@drawable/ic_profile_black"
                    android:id="@+id/profile"
                    android:title="@string/profile"
                    android:visible="false" />

                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />

                <item
                    android:title="@string/tables_data"
                    android:id="@+id/tables_data"
                    android:icon="@drawable/ic_table_view"
                    android:visible="false"
                    />

            </menu>
        </item>

    </group>

    <item android:title="@string/contacts">
        <menu>

            <item
                android:icon="@drawable/ic_star"
                android:id="@+id/nav_rateUs"
                android:title="@string/rate_us"
                android:visible="true" />

            <item
                android:icon="@drawable/ic_share"
                android:id="@+id/nav_recommend"
                android:title="@string/recommend_to_friends"
                android:visible="true" />
            <item
                android:icon="@drawable/ic_support"
                android:id="@+id/nav_contact_support"
                android:title="@string/contact_support"
                android:visible="true" />

            <item
                android:icon="@drawable/ic_logout"
                android:id="@+id/logout"
                android:title="@string/logout"
                android:visible="false" />
        </menu>
    </item>


</menu>