<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/sync_text"
        android:id="@+id/insales_data_sync"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_sync"
        app:iconTint="@color/primary_positive_color"
        android:visible="false"
        />

    <item
        android:title="@string/list_text"
        android:id="@+id/insales_list_type"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_minimal_list"
        app:iconTint="@color/primary_positive_color"
        android:visible="false"
        />

    <item
        android:title="@string/logout"
        android:id="@+id/insales_logout"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_logout"
        app:iconTint="@color/primary_positive_color"
        android:visible="false"
        />

</menu>