<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_margin="@dimen/defaultDpMargin"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
          <com.google.android.material.textview.MaterialTextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:textSize="22dp"
              android:text="@string/choose_option"
              android:textColor="@color/white"
              android:padding="10dp"
              android:background="@color/primary_positive_color"
              />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="22dp"
                android:text="@string/scan"
                android:background="@drawable/bottom_border"
                android:id="@+id/os_item_scanner_view"
                android:textColor="@color/black"
                android:padding="16dp"
                android:layout_marginTop="@dimen/eightDpMargin"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="22dp"
                android:id="@+id/os_item_manual_view"
                android:text="@string/manual_text"
                android:textColor="@color/black"
                android:background="@drawable/bottom_border"
                android:padding="16dp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="22dp"
                android:id="@+id/os_item_import_file"
                android:text="@string/import_file"
                android:textColor="@color/black"
                android:background="@drawable/bottom_border"
                android:padding="16dp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="22dp"
                android:text="@string/cancel_text"
                android:textColor="@color/white"
                android:id="@+id/os_item_cancel_view"
                android:padding="10dp"
                android:background="@color/secondary_positive_color"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>