<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.OcrActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/sixtyDpMargin"
        android:text="@string/camera_text_mode"
        android:textColor="@color/white"
        android:textSize="@dimen/xlargeText"
        android:elevation="2dp"
        />

    <SurfaceView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/surface"/>

      <com.google.android.material.button.MaterialButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toTopOf="@id/close_button"
          android:id="@+id/text_capture_button"
          android:text="@string/text_capture_button_text"
          android:layout_marginBottom="@dimen/eightDpMargin"
          />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/close_button"
        android:text="@string/close_text"
        app:backgroundTint="@color/secondary_positive_color"
        android:layout_marginBottom="@dimen/eightDpMargin"
        />

</androidx.constraintlayout.widget.ConstraintLayout>